added implementation HU-3 and unit tests
