# src/main/resources/openapi/restaurants-api.yaml
@@ -14,8 +14,8 @@ servers:
 tags:
   - name: Restaurants
     description: Restaurant management operations
-#  - name: Admin
-#    description: Admin operations
+  - name: Dishes
+    description: Dish management operations for restaurants
 
 paths:
   /admin/restaurant:
@@ -23,7 +23,6 @@ paths:
       summary: Create a new restaurant
       operationId: createRestaurant
       tags:
-#        - Admin
         - Restaurants
       security:
         - bearerAuth: []
@@ -66,6 +65,58 @@ paths:
                 $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
         '409':
           description: Conflict - NIT already exists
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
+
+  /owner/dish:
+    post:
+      summary: Create a new dish
+      operationId: createDish
+      tags:
+        - Dishes
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '../openapi/schemas/schemas-dish.yaml#/components/schemas/DishRequest'
+      responses:
+        '200':
+          description: Dish created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-dish.yaml#/components/schemas/DishResponse'
+        '400':
+          description: Invalid input data
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
+        '403':
+          description: Forbidden - User is not the restaurant owner
+          content:
+            application/json:
+              schema:
+                $ref: '../openapi/schemas/schemas-error.yaml#/components/schemas/ErrorResponse'
+        '404':
+          description: Restaurant or category not found
           content:
             application/json:
               schema:
